# docs/swagger.yaml
@@ -711,6 +711,36 @@ paths:
       summary: GetAllFaq
       tags:
       - Lookup-Controller
+  /lookup/jenis_usaha:
+    get:
+      consumes:
+      - application/json
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.Jn'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/models.HTTPError'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/models.HTTPError'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/models.HTTPError'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/models.HTTPError'
+      summary: GeAllJenisUsaha
+      tags:
+      - Lookup-Controller
   /lookup/persebaran:
     get:
       consumes:
